nuevo personaje principal

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -106,7 +106,7 @@
 %=========================================================================
 %		FRONT MATTER
 %=========================================================================
-\title{A new method to estimate dark matter halo concentrations}
+\title{Estimating dark matter halo concentration from the integrated mass profile}
 \author[C. Poveda, J.E. Forero-Romero, J.C. Mu\~noz-Cuartas]{
 \parbox[t]{\textwidth}{\raggedright 
   C. Poveda \thanks{cn.poveda542@uniandes.edu.co}$^{1}$
@@ -124,10 +124,10 @@ $^2$Instituto de F\'{\i}sica - FCEN, Universidad de Antioquia, Calle
 
 \begin{abstract}
 
-We present a new method to estimate the concentration of dark matter
-halos in N-body simulations.  Our method finds the concentration value
-to match {\bf the} integrated mass profile as a function of halo
-radius.  The main advantage of this method is that it uses the full
+Here we show that the concentration parameter in dark matter halos from
+N-body simulations can be reliably estimated from the radially integrated mass
+profile.
+The main advantage of this method is that it uses the full
 particle information without any binning, {\bf which makes it very
   switable in cases when resolution becomes important}. We test our
 method both on mock and N-body halos to compare it against two popular
